--- a/main.html
+++ b/main.html
@@ -58,17 +58,17 @@
     	</div>
     </div>
     <section id = "proposal">
-    	<div id = "proposal_1">
+    	<div id = "proposal_1" class = "images">
     		<img src="images/logo1.gif" alt="">
             <img src="images/kyrie.jpg" alt="">
     		<a href="#">VIEW COLLECTION</a>
     	</div>
-        <div id = "proposal_2">        
+        <div id = "proposal_2" class = "images">        
             <img src="images/checkout.jpg" alt="">
     		<a href="#">DISCOVER</a>
     	</div>
-    	<div id ="athletic"><img src="images/athletic.jpg" alt=""></div>
-    	<div id="premium"><img src="images/premium.jpg" alt=""></div>
+    	<div id ="athletic" class = "images"><img src="images/athletic.jpg" alt=""></div>
+    	<div id="premium" class = "images"><img src="images/premium.jpg" alt=""></div>
         
     </section>
     <section >
@@ -469,10 +469,10 @@
                 </div>
                 <div class ="link1 disapire">
                     <h5>SALES</h5>
-                    <a href="#">New Arrivals</a>
-                    <a href="#">Most Popular</a>
-                    <a href="#">Top Picks</a>
-                    <a href="#">Outlet</a>
+                    <a href="#new">New Arrivals</a>
+                    <a href="#popular">Most Popular</a>
+                    <a href="#picks">Top Picks</a>
+                    <a href="#proposal">Outlet</a>
                 </div>
                 <div class ="link1">
                     <h5>SUPPORT</h5>
